--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
         integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM'
         crossorigin='anonymous'></script>
 
-    <script src='https://d3js.org/d3.v7.min.js'></script>
-
     <!-- jQuery -->
     <script src='https://code.jquery.com/jquery-3.6.0.min.js'
         integrity='sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=' crossorigin='anonymous'></script>
 
     <!-- bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel='stylesheet' href='styles.css'>
+    <link rel='stylesheet' href='./styles.css'>
 </head>
 
 <body>
@@ -53,4 +51,4 @@
 
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script src="https://unpkg.com/topojson@3"></script>
-<script type='text/javascript' src='us-elections.js'></script>
+<script type='text/javascript' src='./us-elections.js'></script>
