--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Voting History</title>
 
     <!-- Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;600&display=swap" rel="stylesheet">
+    <link rel='preconnect' href='https://fonts.googleapis.com'>
+    <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
+    <link href='https://fonts.googleapis.com/css2?family=Dosis:wght@500;600&display=swap' rel='stylesheet'>
 
     <!-- Bootstrap CSS -->
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet'
@@ -23,32 +23,32 @@
         integrity='sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=' crossorigin='anonymous'></script>
 
     <!-- bootstrap icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel='stylesheet' href='./styles.css'>
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css'>
+    <link rel='stylesheet' type='text/css' href='./styles.css'>
 </head>
 
 <body>
-    <h4 id="title" class="pt-3 pb-2">US Presidential Elections Voting History</h4>
-    <div class="d-flex">
+    <h4 id='title' class='pt-3 pb-2'>US Presidential Elections Voting History</h4>
+    <div class='d-flex'>
         <svg id='winHistory'>
             <g id='winlegend1'></g>
             <g id='winlegend2'></g>
         </svg>
-        <div class="d-flex flex-column">
+        <div class='d-flex flex-column'>
             <svg id='candInfo'>
-                <g class="candidates"></g>
-                <g class="parties"></g>
-                <g class="logos"></g>
-                <g class="voteBars"></g>
-                <g class="voteCount"></g>
+                <g class='candidates'></g>
+                <g class='parties'></g>
+                <g class='logos'></g>
+                <g class='voteBars'></g>
+                <g class='voteCount'></g>
             </svg>
             <svg id='map'>
             </svg>
         </div>
     </div>
-    <div id="tooltip"></div>
+    <div id='tooltip'></div>
 </body>
 
-<script src="https://d3js.org/d3.v7.min.js"></script>
-<script src="https://unpkg.com/topojson@3"></script>
+<script src='https://d3js.org/d3.v7.min.js'></script>
+<script src='https://unpkg.com/topojson@3'></script>
 <script type='text/javascript' src='./us-elections.js'></script>
